[package]
name = "receipt-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
# Reth networking + wire types (local clone)
reth-network = { path = "../reth/crates/net/network" }
reth-network-api = { path = "../reth/crates/net/network-api" }
reth-network-peers = { path = "../reth/crates/net/peers" }
reth-eth-wire = { path = "../reth/crates/net/eth-wire" }
reth-eth-wire-types = { path = "../reth/crates/net/eth-wire-types" }

# Chain config + primitives
reth-chainspec = { path = "../reth/crates/chainspec" }
reth-ethereum-primitives = { path = "../reth/crates/ethereum/primitives" }
reth-primitives-traits = { path = "../reth/crates/primitives-traits" }
reth-storage-api = { path = "../reth/crates/storage/storage-api" }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Progress UI
indicatif = "0.17.8"

# Primitives
alloy-primitives = "1.5.2"
